--- a/index.html
+++ b/index.html
@@ -178,9 +178,10 @@
         <section class="animation">
           
           <!-- SVG -->
+          <div class="animation__container">
           <svg
-            width="511"
-            height="512"
+            width="311"
+            height="412"
             viewBox="0 0 511 512"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
@@ -245,6 +246,7 @@
               </clipPath>
             </defs>
           </svg>
+        </div>
         </section>
 
         <!--End Card Section #3-->
